--- a/CS61A/app/build.gradle
+++ b/CS61A/app/build.gradle
@@ -21,7 +21,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.android.support:cardview-v7:23.1.0'
@@ -29,4 +29,6 @@ dependencies {
     compile 'com.android.support:design:23.1.0'
     compile 'com.parse.bolts:bolts-android:1.+'
     compile 'com.parse:parse-android:1.+'
+    //compile 'com.algolia:algoliasearch-android:2.4.0'
+    //compile 'com.algolia:algoliasearch:1.6.0'
 }
