--- a/CS61A/app/src/main/AndroidManifest.xml
+++ b/CS61A/app/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".SettingsActivity" />
         <activity
             android:name=".AssignmentActivity"
             android:label="@string/title_activity_assignment"
